# production-model-pattern

./: .gitignore  README.md  pyproject.toml
my_project/: main.py
my_project/scr/: __init__.py  data_transformer.py  load_data.py  metrics.py  model_runner.py  models.py
