[tool.poetry]
name = "showcase-data-science-project"
version = "0.1.0"
description = ""
authors = ["Benjamin Dalton <benjamin.dalton@theaa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.14.3"
scikit-learn = "^1.5.1"
numpy = "^1.26.4"
lightgbm = "^4.4.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
